--- a/ascon_mobile/ios/Runner/Info.plist
+++ b/ascon_mobile/ios/Runner/Info.plist
@@ -59,9 +59,9 @@
     <key>NSPhotoLibraryUsageDescription</key>
     <string>We need access to your photo library to let you share images in chat and update your profile picture.</string>
     <key>NSCameraUsageDescription</key>
-    <string>We need access to your camera to let you take photos for chat attachments and profile pictures.</string>
+    <string>This app requires camera access for Alumni video calls.</string>
     <key>NSMicrophoneUsageDescription</key>
-    <string>We need access to your microphone to enable voice calls with other alumni.</string>
+    <string>This app requires microphone access for Alumni voice and video calls.</string>
     
     <key>NSBluetoothAlwaysUsageDescription</key>
     <string>We need access to bluetooth to connect to your wireless headphones during calls.</string>
